[package]

name = "enum-set-derive"
version = "0.1.0"
license = "MIT/Apache-2.0"
description = "Macros 1.1 implementation of #[derive(EnumMap)]"
authors = [
    "Konrad Borowski <konrad@borowski.pw>"
]

repository = "https://github.com/contain-rs/enum-set"
homepage = "https://github.com/contain-rs/enum-set"
documentation = "https://contain-rs.github.io/enum-set/enum_set"
keywords = ["data-structures"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
